; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/zydas/zd1211rw/extr_zd_chip.c_read_fw_regs_offset.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/zydas/zd1211rw/extr_zd_chip.c_read_fw_regs_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zd_chip = type { i64, i32 }

@FWRAW_REGS_ADDR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"fw_regs_base: %#06hx\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.zd_chip*)* @read_fw_regs_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_fw_regs_offset(%struct.zd_chip* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.zd_chip*, align 8
  %4 = alloca i32, align 4
  store %struct.zd_chip* %0, %struct.zd_chip** %3, align 8
  %5 = load %struct.zd_chip*, %struct.zd_chip** %3, align 8
  %6 = getelementptr inbounds %struct.zd_chip, %struct.zd_chip* %5, i32 0, i32 1
  %7 = call i32 @mutex_is_locked(i32* %6)
  %8 = call i32 @ZD_ASSERT(i32 %7)
  %9 = load %struct.zd_chip*, %struct.zd_chip** %3, align 8
  %10 = load %struct.zd_chip*, %struct.zd_chip** %3, align 8
  %11 = getelementptr inbounds %struct.zd_chip, %struct.zd_chip* %10, i32 0, i32 0
  %12 = bitcast i64* %11 to i32*
  %13 = load i32, i32* @FWRAW_REGS_ADDR, align 4
  %14 = call i32 @zd_ioread16_locked(%struct.zd_chip* %9, i32* %12, i32 %13)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* %4, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %1
  %18 = load i32, i32* %4, align 4
  store i32 %18, i32* %2, align 4
  br label %27

19:                                               ; preds = %1
  %20 = load %struct.zd_chip*, %struct.zd_chip** %3, align 8
  %21 = call i32 @zd_chip_dev(%struct.zd_chip* %20)
  %22 = load %struct.zd_chip*, %struct.zd_chip** %3, align 8
  %23 = getelementptr inbounds %struct.zd_chip, %struct.zd_chip* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = trunc i64 %24 to i32
  %26 = call i32 @dev_dbg_f(i32 %21, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %25)
  store i32 0, i32* %2, align 4
  br label %27

27:                                               ; preds = %19, %17
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i32 @ZD_ASSERT(i32) #1

declare dso_local i32 @mutex_is_locked(i32*) #1

declare dso_local i32 @zd_ioread16_locked(%struct.zd_chip*, i32*, i32) #1

declare dso_local i32 @dev_dbg_f(i32, i8*, i32) #1

declare dso_local i32 @zd_chip_dev(%struct.zd_chip*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
